make-a-wish-salesforce/src/objects/WishReferralForm_Translation__mdt.object
<CustomObject>
    <fields>
        <fullName>Add_Parent_Legal_Guardian__c</fullName>
        <label>Add Parent/Legal Guardian</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_information__c</fullName>
        <label>Additional information</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Requirement__c</fullName>
        <label>Age Requirement</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approximate_diagnosis_date__c</fullName>
        <label>Approximate diagnosis date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_this__c</fullName>
        <label>Check this</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continue__c</fullName>
        <label>Continue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_not__c</fullName>
        <label>Do not</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_not_change_this_field__c</fullName>
        <label>Do not change this field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fact_Communication__c</fullName>
        <label>Fact Communication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_information__c</fullName>
        <label>Family information</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Security__c</fullName>
        <label>Form Security</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender_description__c</fullName>
        <label>Gender description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_this_child_ever_received__c</fullName>
        <label>Has this child ever received</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_or_treatment_facility__c</fullName>
        <label>Hospital or treatment facility</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_Make_A_Wish__c</fullName>
        <label>How did you hear about Make-A-Wish</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICD_Code__c</fullName>
        <label>ICD Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_you_are_human__c</fullName>
        <label>If you are human</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_the_family_aware_of_the_referral__c</fullName>
        <label>Is the family aware of the referral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_there_a_medical_reason__c</fullName>
        <label>Is there a medical reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_information__c</fullName>
        <label>Medical information</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_professional_category__c</fullName>
        <label>Medical professional category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_initial__c</fullName>
        <label>Middle initial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_siblings__c</fullName>
        <label>Number of siblings</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Language__c</fullName>
        <label>Other Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Not_Listed_Diagnosis_Selected__c</fullName>
        <label>Other/Not Listed Diagnosis Selected</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Over_18_years_old__c</fullName>
        <label>Over 18 years old</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_or_Guardian_1__c</fullName>
        <label>Parent or Guardian 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_or_Guardian_2__c</fullName>
        <label>Parent or Guardian 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Please_provide_the_best_person__c</fullName>
        <label>Please provide the best person</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Diagnosis_Description__c</fullName>
        <label>Primary Diagnosis Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_diagnosis__c</fullName>
        <label>Primary diagnosis</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_phone_number__c</fullName>
        <label>Primary phone number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provide_your_relationship_to_the_child__c</fullName>
        <label>Provide your relationship to the child</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Has_the_child_ever_received__c</fullName>
        <label>Question - Has the child ever received..</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Is_there_a_medical_reason__c</fullName>
        <label>Question - Is there a medical reason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_information__c</fullName>
        <label>Referrer information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_child__c</fullName>
        <label>Relationship to child</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remove_if_no_Parent_Guardian_2__c</fullName>
        <label>Remove if no Parent/Guardian 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Same_address_as_Parent_or_Guardian_1__c</fullName>
        <label>Same address as Parent or Guardian 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Same_as_Referrer_Information__c</fullName>
        <label>Same as Referrer Information</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Checkbox__c</fullName>
        <label>Security Checkbox</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Input__c</fullName>
        <label>Security Input</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Describe_selected__c</fullName>
        <label>Self-Describe selected</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sibling_information__c</fullName>
        <label>Sibling information</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit__c</fullName>
        <label>Submit</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thank_you_for_submitting_a_referral__c</fullName>
        <label>Thank you for submitting a referral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treating_medical_professional_informatio__c</fullName>
        <label>Treating medical professional informatio</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_the_family_s_primary__c</fullName>
        <label>What is the family’s primary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wish_child_information__c</fullName>
        <label>Wish child information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spanishCommunication__c</fullName>
        <label>spanishCommunication</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>spanishLanguage__c</fullName>
        <label>spanishLanguage</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>WishReferralForm Translation</label>
    <pluralLabel>WishReferralForm Translations</pluralLabel>
</CustomObject>